# appinit

./: .gitignore  ARCHITECTURE.md  README.md  go.mod  repo.code-workspace
.github/workflows/: deploy-binaries.yml
app/: go.mod  main.go
app/assets/templates/app/: pyproject.toml
app/assets/templates/app/scripts/: upgrade_dependencies.py
app/assets/templates/app/src/config/: __init__.py  settings.py
app/cmd/: create.go  root.go
app/test/app/: pyproject.toml
app/test/app/src/: main.py
assets/templates/: .gitignore
cmd/: create.go
infra/: app.py  config.py  pyproject.toml
infra/config/: prod.json
infra/lambda_functions/: download_handler.py  install_handler.py  list_handler.py
infra/scripts/: build_and_deploy.py  setup_github_oidc.py  upgrade_dependencies.py
infra/stacks/: binary_distribution_stack.py
repo/infra/: app.py  pyproject.toml
