[project]
name = ""
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = [
    "aws-cdk-lib>=2.232.1",
    "constructs>=10.4.4",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "jupyterlab>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "tomli>=2.3.0",
]

[tool.ruff]
line-length = 120
